name:                simulation
version:             0.1.0.0
author:              James Coleman Gibson
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simulation
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , mtl
                     , aeson
                     , bytestring
  other-modules:       Physics
                     , Entity
                     , Logging
