name:                simulation
version:             0.1.0.0
author:              James Coleman Gibson
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simulation
  ghc-options:
               -O2
               -threaded
               -with-rtsopts=-N8
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , mtl
                     , aeson
                     , bytestring
                     , random
                     , parallel
  other-modules:       Physics
                     , Entity
                     , Logging
